--- a/main.tex
+++ b/main.tex
@@ -3,29 +3,43 @@
 \usepackage[spanish]{babel}
 \usepackage[a4paper]{geometry}
 \usepackage{graphicx}
-\usepackage[hidelinks]{hyperref}
+
 \usepackage{listings}
 \usepackage{enumitem}
 
-\title{
-    Proyecto Final (E0227)\\
-    Cargador de Baterías de Litio de 36V
-}
-
-\date{}
-
-\author{
-    Nicolás Cabrera\\
-    Enzo Imanol Sánchez Croce
-}
+\usepackage{biblatex}
+\usepackage{csquotes}
+\addbibresource{biblio.bib}
 
 \begin{document}
-\maketitle
+
+\begin{titlepage}
+    \centering
+    {\includegraphics[width=0.2\textwidth]{images/unlp-escudo.png}\par}
+    \vspace{1cm}
+    {\bfseries\LARGE Universidad Nacional de La Plata \par}
+    \vspace{1cm}
+    {\scshape\LARGE Facultad de Ingenier\'ia Electr\'onica \par}
+    \vspace{3cm}
+    {\scshape\Huge Cargador de Bater\'ias de Litio de 36V \par}
+    \vspace{3cm}
+    {\itshape\Large C\'atedra de Proyecto Final (E0227) \par}
+    \vfill
+    {\Large Autores: \par}
+    {\Large CABRERA, Nicol\'as \par}
+    {\Large S\'ANCHEZ CROCE, Enzo Imanol \par}
+    \vfill
+    {\Large 2022 \par}
+\end{titlepage}
 \thispagestyle{empty}
 \newpage
+
 \pagenumbering{arabic}
 
-\maketitle
+\tableofcontents
+\newpage
 
+
+\printbibliography
 
 \end{document}
