Removí parámetros vacíos de la entrada del Mohan

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,9 +3,7 @@
 	author    = {Ned Mohan, Tore M. Undeland, William P. Robbins},
 	publisher = {Wiley},
 	year      = {2002},
-	series    = {},
-	edition   = {3},
-	volume    = {}
+	edition   = {3}
 }
 
 @online{battery-university,
