Correción de la portada

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
     \vspace{1cm}
     {\bfseries\LARGE Universidad Nacional de La Plata \par}
     \vspace{1cm}
-    {\scshape\LARGE Facultad de Ingenier\'ia Electr\'onica \par}
+    {\scshape\LARGE Facultad de Ingenier\'ia \par}
     \vspace{3cm}
     {\scshape\Huge Cargador de Bater\'ias de Litio de 36V \par}
     \vspace{3cm}
