Formato -Pase de hoja A4 a Carta -Cambie el formato de citas a IEEE -Reduje el tamaño de los nombres de los autores

--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,13 @@
 \documentclass[12pt]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
-\usepackage[a4paper]{geometry}
+\usepackage[letterpaper]{geometry}
 \usepackage{graphicx}
 
 \usepackage{listings}
 \usepackage{enumitem}
 
-\usepackage{biblatex}
+\usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
 \addbibresource{biblio.bib}
 
@@ -26,8 +26,8 @@
     {\itshape\Large C\'atedra de Proyecto Final (E0227) \par}
     \vfill
     {\Large Autores: \par}
-    {\Large CABRERA, Nicol\'as \par}
-    {\Large S\'ANCHEZ CROCE, Enzo Imanol \par}
+    {\large CABRERA, Nicol\'as \par}
+    {\large S\'ANCHEZ CROCE, Enzo Imanol \par}
     \vfill
     {\Large 2022 \par}
 \end{titlepage}
