Corregí el Mohan, agregué el Pressman, removí BU

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,15 +1,19 @@
 @book{mohan,
 	title     = {Power Electronics: Converters, Applications, and Design},
-	author    = {Ned Mohan, Tore M. Undeland, William P. Robbins},
+	author    = {Ned Mohan and Tore M. Undeland and William P. Robbins},
 	publisher = {Wiley},
+	isbn      = {978047122693},
 	year      = {2002},
 	edition   = {3}
 }
 
-@online{battery-university,
-	title  = {Battery University},
-	url    = {http://www.batteryuniversity.com/},
-	author = {Isidor Buchmann}
+@book{pressman,
+	title     = {Switching Power Supply Design},
+	author    = {Abraham Pressman and Keith Billings and Taylor Morey},
+	publisher = {McGraw-Hill Professional},
+	isbn      = {9780071594325},
+	year      = {2009},
+	edition   = {3}
 }
 
 @manual{ncr18650ga,
