Formulación del proyecto

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{report}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage[letterpaper]{geometry}
@@ -20,8 +20,8 @@
     {\bfseries\LARGE Universidad Nacional de La Plata \par}
     \vspace{1cm}
     {\scshape\LARGE Facultad de Ingenier\'ia \par}
-    \vspace{3cm}
-    {\scshape\Huge Cargador de Bater\'ias de Litio de 36V \par}
+    \vspace{2cm}
+    {\scshape\Huge Cargador de Bater\'ias de Litio de 36V con corriente de salida variable \par}
     \vspace{3cm}
     {\itshape\Large C\'atedra de Proyecto Final (E0227) \par}
     \vfill
@@ -39,6 +39,13 @@
 \tableofcontents
 \newpage
 
+\input{sections/resumen.tex}
+\input{sections/motivacion.tex}
+\input{sections/objetivos.tex}
+\input{sections/factibilidad.tex}
+\input{sections/resultados.tex}
+\input{sections/resultados.tex}
+\input{sections/cronograma.tex}
 
 \printbibliography
 
