Desarrollo de secciones

--- a/main.tex
+++ b/main.tex
@@ -36,14 +36,10 @@
 
 \pagenumbering{arabic}
 
-\tableofcontents
-\newpage
-
 \input{sections/resumen.tex}
-\input{sections/motivacion.tex}
 \input{sections/objetivos.tex}
+\input{sections/actividades.tex}
 \input{sections/factibilidad.tex}
-\input{sections/resultados.tex}
 \input{sections/resultados.tex}
 \input{sections/cronograma.tex}
 
