--- a/sections/factibilidad.tex
+++ b/sections/factibilidad.tex
@@ -1,1 +1,14 @@
-\section{Factibilidad, Recursos, Presupuesto}
+\section*{Factibilidad, Recursos, Presupuesto}
+RECURSOS MATERIALES.
+ATEI: instalación para el diseño del prototipo a escala y equipos necesarios para las pruebas de evaluación, como osciloscopio, multímetros, conectores, y componentes pasivos. 
+Batería con BMS 
+Bibliografía disponible en Internet o en la biblioteca de la facultad
+Software de simulación de circuitos
+
+RECURSOS FINANCIEROS.
+Fondos proporcionados por la facultad para el desarrollo de los prototipos.
+
+RECURSOS HUMANOS.
+Integrantes del proyecto y de la cátedra
+
+En base a la disponibilidad de todos estos recursos es factible cumplir con los objetivos y las metas establecidas. 
