--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,5 +1,6 @@
 \begin{abstract}
-    Este proyecto pretende desarrollar un cargador para baterías de litio de 36V,
+    El proyecto surge de la necesidad de cargar la batería de una bicicleta con asistencia eléctrica.
+    Se desarrollará un cargador para baterías de litio de 36V de diferentes capacidades,
     generalmente utilizadas en vehículos de transporte,
     con la finalidad de ofrecer una carga segura y eficaz.
     
