--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -1,1 +1,29 @@
-\section{Actividades y Metodología}
+\section*{Actividades y Metodología}
+El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
+Los ensayos necesarios se realizarán en el ATEI (Área Técnica de Electrónica e Instrumental),
+ubicado dentro del edificio de Electrotecnia en la facultad.
+Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y revisión de decisiones.
+
+El diseño será dividido en distintos bloques, cada uno de los cuales se detallará en el siguiente listado:
+\begin{itemize}
+    \item Fuente conmutada: Realiza la conversión de tensión de la red domestica a una tensión continua para alimentar el cargador.
+    \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
+    \item Circuito de control: Se encarga de alternar entre las etapas de carga.
+    \item Circuito de protección: Debe proteger a la batería en caso de cortocircuito.
+\end{itemize} 
+
+Lectura de bibliografía. Buscar, analizar y seleccionar información en diversas fuentes.
+
+Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
+
+Cálculo de los componentes necesarios en base a la topología utilizada
+
+Elaboración de documento con la información utilizada para el diseño 
+
+Simulación del diseño del circuito mediante software
+
+Creación de un prototipo a escala
+
+Pruebas técnicas que permitan evaluar el grado del cumplimiento del proyecto
+
+estrategias y técnicas
