Correción de errores

--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -18,7 +18,7 @@ Desarrollo de diferentes propuestas y toma de decisiones en base a las especific
 
 Cálculo de los componentes necesarios en base a la topología utilizada
 
-Elaboración de documento con la información utilizada para el diseño 
+Elaboración de documento con la información utilizada para su diseño 
 
 Simulación del diseño del circuito mediante software
 
