--- a/sections/factibilidad.tex
+++ b/sections/factibilidad.tex
@@ -1,4 +1,4 @@
-\section*{Factibilidad, Recursos, Presupuesto}
+\section{Factibilidad, Recursos, Presupuesto}
 RECURSOS MATERIALES.
 ATEI: instalación para el diseño del prototipo a escala y equipos necesarios para las pruebas de evaluación, como osciloscopio, multímetros, conectores, y componentes pasivos. 
 Batería con BMS 
