--- a/sections/objetivos.tex
+++ b/sections/objetivos.tex
@@ -1,4 +1,4 @@
-\section*{Objetivos}
+\section{Objetivos}
 
 El objetivo principal de este proyecto es diseñar un dispositivo que sea capaz de realizar una carga completa en una batería en buen estado,
 la cual deberá contar con un sistema de gestión de baterías (BMS, por sus siglas en inglés)
