--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -1,18 +1,34 @@
-\section*{Actividades y Metodología}
+\section{Actividades y Metodología}
 El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
 Los ensayos necesarios se realizarán en el ATEI (Área Técnica de Electrónica e Instrumental),
 ubicado dentro del edificio de Electrotecnia en la facultad.
 Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y revisión de decisiones.
 
-El diseño será dividido en distintos bloques, cada uno de los cuales se detallará en el siguiente listado:
+El diseño será dividido en distintas etapas, cada una de las cuales se detallará a continuación.
+
+\subsection{Lectura de bibliografía}
+Se analizarán los aspectos de seguridad a tener en cuenta,
+se estudiarán las curvas de carga de la batería y
+se analizarán las distintas topologías utilizadas habitualmente en el diseño de conversores de potencia,
+de acuerdo con los requerimientos del proyecto.
+
+\subsection{Diseño}
+Una vez estudiados los aspectos mencionados en el apartado anterior,
+se comenzará con el diseño del cargador,
+realizando simulaciones en SPICE (Programa de simulación con énfasis en circuitos integrados),
+separando el proceso en 4 partes:
 \begin{itemize}
     \item Fuente conmutada: Realiza la conversión de tensión de la red domestica a una tensión continua para alimentar el cargador.
     \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
     \item Circuito de control: Se encarga de alternar entre las etapas de carga.
     \item Circuito de protección: Debe proteger a la batería en caso de cortocircuito.
-\end{itemize} 
+\end{itemize}
 
-Lectura de bibliografía. Buscar, analizar y seleccionar información en diversas fuentes.
+\subsection{Implementación}
+Se realizará una implementación del cargador en una placa de circuito impreso.
+
+\subsection{Validación}
+Una vez terminado el proceso de diseño e implementación, se 
 
 Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
 
