--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -42,4 +42,4 @@ Creación de un prototipo a escala
 
 Pruebas técnicas que permitan evaluar el grado del cumplimiento del proyecto
 
-estrategias y técnicas
+estrategias y técnicas hola
