--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,8 @@
 \usepackage{csquotes}
 \addbibresource{biblio.bib}
 
+\usepackage{pgfgantt}
+
 \begin{document}
 
 \begin{titlepage}
@@ -41,6 +43,7 @@
 \input{sections/actividades.tex}
 \input{sections/factibilidad.tex}
 \input{sections/cronograma.tex}
+\input{sections/resultados_e_indicadores.tex} % ORDENAR
 
 \printbibliography
 
