--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -1,16 +1,21 @@
 \section{Actividades y Metodología}
+
+%Localización física y ubicación de instalaciones:
+
 El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
 Los ensayos necesarios se realizarán en el ATEI (Área Técnica de Electrónica e Instrumental),
 ubicado dentro del edificio de Electrotecnia en la facultad.
-Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y revisión de decisiones.
+Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
+revisión de decisiones tomadas por el equipo de trabajo.
 
-El diseño será dividido en distintas etapas, cada una de las cuales se detallará a continuación.
+Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades integradas y secuenciales:
 
 \subsection{Lectura de bibliografía}
-Se analizarán los aspectos de seguridad a tener en cuenta,
-se estudiarán las curvas de carga de la batería y
-se analizarán las distintas topologías utilizadas habitualmente en el diseño de conversores de potencia,
-de acuerdo con los requerimientos del proyecto.
+Con el objetivo de capacitarse, se estudiarán y analizarán aspectos de seguridad, curvas de carga de la batería 
+y topologías de conversores de potencia, de acuerdo con los requerimientos del proyecto. 
+Se evaluarán las diferentes alternativas posibles y,
+en base a la complejidad y al costo de las diferentes alternativas,
+se elegirá la solución más adecuada para el logro de los objetivos. 
 
 \subsection{Diseño}
 Una vez estudiados los aspectos mencionados en el apartado anterior,
@@ -26,20 +31,23 @@ separando el proceso en 4 partes:
 
 \subsection{Implementación}
 Se realizará una implementación del cargador en una placa de circuito impreso.
+Debido a que el coste de una batería de litio de las características necesarias es elevado,
+no se descarta la posibilidad de realizar un prototipo a escalado a una batería de menor tensión y/o capacidad.
 
 \subsection{Validación}
-Una vez terminado el proceso de diseño e implementación, se 
+Una vez terminado el proceso de diseño e implementación,
+se procederá a verificar que el prototipo cumpla con los requerimientos del proyecto.
 
-Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
+%Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
 
-Cálculo de los componentes necesarios en base a la topología utilizada
+%Cálculo de los componentes necesarios en base a la topología utilizada
 
-Elaboración de documento con la información utilizada para su diseño 
+%Elaboración de documento con la información utilizada para su diseño 
 
-Simulación del diseño del circuito mediante software
+%Simulación del diseño del circuito mediante software
 
-Creación de un prototipo a escala
+%Creación de un prototipo a escala
 
-Pruebas técnicas que permitan evaluar el grado del cumplimiento del proyecto
+%Pruebas técnicas que permitan evaluar el grado del cumplimiento del proyecto
 
-estrategias y técnicas hola
+%estrategias y técnicas
