--- a/sections/objetivos.tex
+++ b/sections/objetivos.tex
@@ -1,12 +1,12 @@
 \section{Objetivos}
 
-El objetivo principal de este proyecto es diseñar un dispositivo que sea capaz de realizar una carga completa en una batería en buen estado,
-la cual deberá contar con un sistema de gestión de baterías (BMS, por sus siglas en inglés)
+El objetivo principal de este proyecto es diseñar un dispositivo que sea capaz de realizar una carga completa en una batería 
+en buen estado, la cual deberá contar con un sistema de gestión de baterías (BMS, por sus siglas en inglés)
 con protección contra sobrecarga, sobre descarga, sobre corriente y temperaturas extremas.
 
 Para lograrlo, el cargador deberá:
 \begin{itemize}
     \item Recargar las celdas que componen a la batería siguiendo el perfil de carga teórico en cada uno de los siete modos de carga.
     \item Proteger a la batería en caso de un cortocircuito cortando la alimentación y notificando al usuario mediante el LED indicador.
-    \item Proveer seguridad y fiabilidad sin generar daños en la batería.
+    \item Garantizar fiabilidad sin generar daños en la batería.
 \end{itemize}
