--- a/sections/factibilidad.tex
+++ b/sections/factibilidad.tex
@@ -1,14 +1,18 @@
-\section{Factibilidad, Recursos, Presupuesto}
-RECURSOS MATERIALES.
-ATEI: instalación para el diseño del prototipo a escala y equipos necesarios para las pruebas de evaluación, como osciloscopio, multímetros, conectores, y componentes pasivos. 
-Batería con BMS 
-Bibliografía disponible en Internet o en la biblioteca de la facultad
-Software de simulación de circuitos
+\section{Recursos,Factibilidad}
 
-RECURSOS FINANCIEROS.
-Fondos proporcionados por la facultad para el desarrollo de los prototipos.
+Para que exista coherencia entre los objetivos y las actividades que exige el desarrollo del proyecto se requieren diferentes tipos de recursos. 
 
-RECURSOS HUMANOS.
-Integrantes del proyecto y de la cátedra
+\subsection{Recursos materiales}
+Para la etapa de diseño se contará con bibliografía disponible en Internet o en la biblioteca de la facultad y software de simulación de circuitos.
+La construcción del prototipo y los ensayos se realizarán utilizando las herramientas, el equipamiento y la instrumentación del 
+Área Técnica de Electrónica e Instrumental (ATEI) del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP. 
+Para la validación experimental del prototipo se requerirá una batería de 36V con BMS integrado. 
 
-En base a la disponibilidad de todos estos recursos es factible cumplir con los objetivos y las metas establecidas. 
+\subsection{Recursos financieros}
+Los fondos necesarios para la compra de componentes serán proporcionados por la cátedra de Proyecto Final.
+
+\subsection{Recursos humanos}
+Las actividades serán llevadas a cabo por el equipo que conforma el proyecto con el apoyo de los integrantes de la cátedra.
+
+Dado que el proyecto no depende de factores socioculturales o políticos, en base a la disponibilidad y correcta asignación
+de todos los recursos previamente nombrados, es factible y viable cumplir con los objetivos y las metas establecidas. 
