Correcciones (a confirmar) y metas

--- a/main.tex
+++ b/main.tex
@@ -3,15 +3,15 @@
 \usepackage[spanish]{babel}
 \usepackage[letterpaper]{geometry}
 \usepackage{graphicx}
-
+\usepackage{pgfgantt}
 \usepackage{listings}
 \usepackage{enumitem}
+\usepackage{float}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
 \addbibresource{biblio.bib}
 
-\usepackage{pgfgantt}
 
 \begin{document}
 
@@ -42,8 +42,8 @@
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
 \input{sections/factibilidad.tex}
-\input{sections/cronograma.tex}
 \input{sections/resultados_e_indicadores.tex} % ORDENAR
+\input{sections/cronograma.tex}
 
 \printbibliography
 
