--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -3,8 +3,8 @@
 %Localización física y ubicación de instalaciones:
 
 El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
-Los ensayos necesarios se realizarán en el ATEI (Área Técnica de Electrónica e Instrumental),
-ubicado dentro del edificio de Electrotecnia en la facultad.
+Los ensayos necesarios se realizarán en el Área Técnica de Electrónica e Instrumental (ATEI)
+del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP.
 Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
 revisión de decisiones tomadas por el equipo de trabajo.
 
@@ -14,7 +14,7 @@ Para alcanzar las metas y los objetivos propuestos, se realizarán las siguiente
 Con el objetivo de capacitarse, se estudiarán y analizarán aspectos de seguridad, curvas de carga de la batería 
 y topologías de conversores de potencia, de acuerdo con los requerimientos del proyecto. 
 Se evaluarán las diferentes alternativas posibles y,
-en base a la complejidad y al costo de las diferentes alternativas,
+en base a su complejidad y costo,
 se elegirá la solución más adecuada para el logro de los objetivos. 
 
 \subsection{Diseño}
