--- a/sections/factibilidad.tex
+++ b/sections/factibilidad.tex
@@ -1,12 +1,11 @@
-\section{Recursos,Factibilidad}
+\section{Factibilidad}
 
 Para que exista coherencia entre los objetivos y las actividades que exige el desarrollo del proyecto se requieren diferentes tipos de recursos. 
 
 \subsection{Recursos materiales}
 Para la etapa de diseño se contará con bibliografía disponible en Internet o en la biblioteca de la facultad y software de simulación de circuitos.
-La construcción del prototipo y los ensayos se realizarán utilizando las herramientas, el equipamiento y la instrumentación del 
-Área Técnica de Electrónica e Instrumental (ATEI) del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP. 
-Para la validación experimental del prototipo se requerirá una batería de 36V con BMS integrado. 
+La construcción del prototipo y los ensayos se realizarán utilizando las herramientas, el equipamiento y la instrumentación del ATEI. 
+Para la validación experimental del prototipo se requerirá una batería de litio de 36V con BMS integrado. 
 
 \subsection{Recursos financieros}
 Los fondos necesarios para la compra de componentes serán proporcionados por la cátedra de Proyecto Final.
