--- a/sections/objetivos.tex
+++ b/sections/objetivos.tex
@@ -6,7 +6,8 @@ con protección contra sobrecarga, sobre descarga, sobre corriente y temperatura
 
 Para lograrlo, el cargador deberá:
 \begin{itemize}
-    \item Recargar las celdas que componen a la batería siguiendo el perfil de carga teórico en cada uno de los siete modos de carga.
+    \item Contar con un selector que permita elegir la capacidad de la batería que se desea cargar, regulando de manera acorde la corriente de salida.
+    \item Recargar las celdas que componen a la batería siguiendo un perfil de carga establecido en el proceso de diseño.
     \item Proteger a la batería en caso de un cortocircuito cortando la alimentación y notificando al usuario mediante el LED indicador.
     \item Garantizar fiabilidad sin generar daños en la batería.
 \end{itemize}
