--- a/sections/resultados_e_indicadores.tex
+++ b/sections/resultados_e_indicadores.tex
@@ -1,21 +1,23 @@
 \section{Metas}
 
-La evaluación de un proyecto juzga el cumplimiento de los objetivos. 
+%La evaluación de un proyecto juzga el cumplimiento de los objetivos. 
 
-Las metas operacionalizan y cuantifican a los objetivos, convirtiéndolos en logros específicos.
-Determinan cuándo, dónde y cuánto se realizarán de los mismos. Los definen en términos medibles.
+%Las metas operacionalizan y cuantifican a los objetivos, convirtiéndolos en logros específicos.
+%Determinan cuándo, dónde y cuánto se realizarán de los mismos. Los definen en términos medibles.
 
+Se realizarán dos (2) entregables: un archivo de simulación a mediados de Julio,
+cuando finalice la etapa de diseño,
+y un prototipo de cargador funcional en el mes de Diciembre,
+junto con el manual de instrucciones y el informe final.
 
+A continuación se listan las metas del proyecto con sus respectivos indicadores:
 
-
-
-Los indicadores establecen los criterios de éxito del proyecto, es decir, especifican cómo se miden las metas planteadas. 
-\item Desviaciones menores al 5\% de la tensión y corriente requeridas en el perfil de carga 
-\item Eficiencia superior al 70\%
-\item Correcto funcionamiento del LED para cada uno de los estados del cargador
-\item Desconexión de la alimentación en caso de cortocircuito
-\item %tiempo máximo de carga?
-\item Funcionamiento correcto en todo el rango de entrada y en ambas frecuencias. 
-Productos que el proyecto espera entregar:
-Primera entrega de la simulación completa del circuito
-Segunda entrega con el prototipo final que cumplirá con todas las especificaciones y su manual de uso
+%Los indicadores establecen los criterios de éxito del proyecto, es decir, especifican cómo se miden las metas planteadas. 
+\begin{itemize}
+    \item Desviaciones menores al 5\% de la tensión nominal y corriente nominal requeridas en el perfil de carga
+    \item Eficiencia superior al 70\% % DUDOSO
+    \item Correcto funcionamiento del LED para cada uno de los estados del cargador
+    \item Desconexión de la alimentación en caso de cortocircuito
+    %\item Tiempo máximo de carga?
+    %\item Funcionamiento correcto en todo el rango de entrada y en ambas frecuencias. ???
+\end{itemize}
