LOS AMIGOS DE KARACA

--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -5,8 +5,7 @@
 El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
 Los ensayos necesarios se realizarán en el Área Técnica de Electrónica e Instrumental (ATEI)
 del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP.
-Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
-revisión de decisiones tomadas por el equipo de trabajo.
+Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y la revisión de decisiones tomadas por el equipo de trabajo.
 
 Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades integradas y secuenciales:
 
@@ -14,29 +13,27 @@ Para alcanzar las metas y los objetivos propuestos, se realizarán las siguiente
 Con el objetivo de capacitarse, se estudiarán y analizarán aspectos de seguridad, curvas de carga de la batería 
 y topologías de conversores de potencia, de acuerdo con los requerimientos del proyecto. 
 Se evaluarán las diferentes alternativas posibles y,
-en base a su complejidad y costo,
+en base a su complejidad y a su costo,
 se elegirá la solución más adecuada para el logro de los objetivos. 
 
 \subsection{Diseño}
-Una vez estudiados los aspectos mencionados en el apartado anterior,
-se comenzará con el diseño del cargador,
-realizando simulaciones en SPICE (Programa de simulación con énfasis en circuitos integrados),
+Se realizarán simulaciones en SPICE (programa de simulación con énfasis en circuitos integrados),
 separando el proceso en 4 partes:
 \begin{itemize}
-    \item Fuente conmutada: Realiza la conversión de tensión de la red domestica a una tensión continua para alimentar el cargador.
+    \item Fuente conmutada: Convierte la tensión alterna de la red domestica en una tensión constante continua.
     \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
-    \item Circuito de control: Se encarga de alternar entre las etapas de carga.
-    \item Circuito de protección: Debe proteger a la batería en caso de cortocircuito.
+    \item Circuito de control: Alterna entre las etapas de carga.
+    \item Circuito de protección: Protege a la batería en caso de cortocircuito.
 \end{itemize}
 
 \subsection{Implementación}
-Se realizará una implementación del cargador en una placa de circuito impreso.
-Debido a que el coste de una batería de litio de las características necesarias es elevado,
-no se descarta la posibilidad de realizar un prototipo a escalado a una batería de menor tensión y/o capacidad.
+El cargador se implementará en una placa de circuito impreso.
+Debido a que el costo de una batería de litio de las características necesarias es elevado,
+se evaluará la posibilidad de realizar un prototipo a escala con una batería de menor tensión y/o capacidad.
 
 \subsection{Validación}
 Una vez terminado el proceso de diseño e implementación,
-se procederá a verificar que el prototipo cumpla con los requerimientos del proyecto.
+se verificará que el prototipo cumpla con los requerimientos del proyecto.
 
 %Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
 
