--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -16,7 +16,7 @@ a desarrollar y sus tiempos correspondientes.
                 group right shift=0,
                 group top shift=.6,
                 group height=.3,]{1}{28}
-            %labels
+            %etiquetas
             \gantttitle{Mes}{28} \\
             \gantttitle{May}{4}
             \gantttitle{Jun}{4}
@@ -26,7 +26,7 @@ a desarrollar y sus tiempos correspondientes.
             \gantttitle{Oct}{4}
             \gantttitle{Nov}{4} \\
 
-            %tasks
+            %tareas
             \ganttbar{Investigación}{1}{10} \\
             \ganttgroup{Diseño}{2}{10} \\
             \ganttbar{Fuente conmutada}{2}{5} \\
@@ -37,8 +37,6 @@ a desarrollar y sus tiempos correspondientes.
             \ganttbar{Validación}{16}{21} \\
             \ganttbar{Informe}{21}{28}
 
-            %relations
-            %\ganttlink{elem6}{elem7}
         \end{ganttchart}
     \end{center}
     \caption{Cronograma del proyecto}
