--- a/sections/resultados_e_indicadores.tex
+++ b/sections/resultados_e_indicadores.tex
@@ -5,12 +5,12 @@
 %Las metas operacionalizan y cuantifican a los objetivos, convirtiéndolos en logros específicos.
 %Determinan cuándo, dónde y cuánto se realizarán de los mismos. Los definen en términos medibles.
 
-Se realizarán dos (2) entregables: un archivo de simulación a mediados de Julio,
+Se realizarán dos (2) entregas: un archivo de simulación a mediados de Julio,
 cuando finalice la etapa de diseño,
 y un prototipo de cargador funcional en el mes de Diciembre,
 junto con el manual de instrucciones y el informe final.
 
-A continuación se listan las metas del proyecto con sus respectivos indicadores:
+Las metas del proyecto con sus respectivos indicadores son las siguientes:
 
 %Los indicadores establecen los criterios de éxito del proyecto, es decir, especifican cómo se miden las metas planteadas. 
 \begin{itemize}
