--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -10,7 +10,7 @@
     debido a que el litio es un material altamente reactivo,
     es necesario que el proceso de carga se realice de manera correcta.
     
-    Dentro de un limite presupuestario y de tiempo, mediante actividades ordenadas y coordinadas,
+    Dentro de un limite de tiempo y presupuestario, mediante actividades ordenadas y coordinadas,
     se combinarán diferentes tipos de recursos para lograr construir el cargador que cumpla con
     todas las especificaciones previstas. 
 
