--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,7 @@
 \input{sections/resumen.tex}
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
+\input{sections/recursos.tex}
 \input{sections/factibilidad.tex}
 \input{sections/resultados_e_indicadores.tex} % ORDENAR
 \input{sections/cronograma.tex}
