--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -5,7 +5,8 @@
 El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
 Los ensayos necesarios se realizarán en el Área Técnica de Electrónica e Instrumental (ATEI)
 del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP.
-Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y la revisión de decisiones tomadas por el equipo de trabajo.
+Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
+la revisión de decisiones tomadas por el equipo de trabajo.
 
 Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades integradas y secuenciales:
 
@@ -20,7 +21,7 @@ se elegirá la solución más adecuada para el logro de los objetivos.
 Se realizarán simulaciones en SPICE (programa de simulación con énfasis en circuitos integrados),
 separando el proceso en 4 partes:
 \begin{itemize}
-    \item Fuente conmutada: Convierte la tensión alterna de la red domestica en una tensión constante continua.
+    \item Fuente conmutada: Convierte la tensión alterna de la red domestica en una tensión continua.
     \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
     \item Circuito de control: Alterna entre las etapas de carga.
     \item Circuito de protección: Protege a la batería en caso de cortocircuito.
