--- a/sections/objetivos.tex
+++ b/sections/objetivos.tex
@@ -1,7 +1,8 @@
 \section{Objetivos}
 
-El objetivo principal de este proyecto es diseñar un dispositivo que sea capaz de realizar una carga completa de una batería 
-en buen estado, la cual deberá contar con un sistema de gestión de baterías (BMS, por sus siglas en inglés)
+El objetivo principal de este proyecto es diseñar un dispositivo que sea capaz de realizar
+una carga completa de una batería en buen estado,
+la cual deberá contar con un sistema de gestión de baterías (BMS, por sus siglas en inglés)
 con protección contra sobrecarga, sobre descarga, sobre corriente y temperaturas extremas.
 
 Para lograrlo, el cargador deberá:
