--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -21,7 +21,7 @@ se elegirá la solución más adecuada para el logro de los objetivos.
 Se realizarán simulaciones en SPICE (programa de simulación con énfasis en circuitos integrados),
 separando el proceso en 4 partes:
 \begin{itemize}
-    \item Fuente conmutada: Convierte la tensión alterna de la red domestica en una tensión continua.
+    \item Fuente conmutada: Convierte la tensión alterna de la red doméstica en una tensión continua.
     \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
     \item Circuito de control: Alterna entre las etapas de carga.
     \item Circuito de protección: Protege a la batería en caso de cortocircuito.
