--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -13,6 +13,7 @@ a desarrollar y sus tiempos correspondientes.
                 title height=1,
                 progress label text={},
                 bar height=0.7,
+                bar top shift=0.15,
                 group right shift=0,
                 group top shift=.6,
                 group height=.3,]{1}{28}
