--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -29,11 +29,12 @@ a desarrollar y sus tiempos correspondientes.
 
             %tareas
             \ganttbar{Investigación}{1}{10} \\
-            \ganttgroup{Diseño}{2}{10} \\
-            \ganttbar{Fuente conmutada}{2}{5} \\
-            \ganttbar{Fuente de corriente}{5}{7} \\
-            \ganttbar{Control}{6}{9} \\
-            \ganttbar{Protecciones}{9}{10} \\
+            %\ganttgroup{Diseño}{2}{10} \\
+            %\ganttbar{Fuente conmutada}{2}{5} \\
+            %\ganttbar{Fuente de corriente}{5}{7} \\
+            %\ganttbar{Control}{6}{9} \\
+            %\ganttbar{Protecciones}{9}{10} \\
+            \ganttbar{Diseño}{2}{10} \\
             \ganttbar{Implementación}{11}{18} \\
             \ganttbar{Validación}{16}{21} \\
             \ganttbar{Informe}{21}{28}
