--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -8,16 +8,13 @@ del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP.
 Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
 la revisión de decisiones tomadas por el equipo de trabajo.
 
-Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades integradas y secuenciales:
+Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades:
 
-\subsection{Lectura de bibliografía}
+\subsection{Estudio de bibliografía y Diseño}
 Con el objetivo de capacitarse, se estudiarán y analizarán aspectos de seguridad, curvas de carga de la batería 
 y topologías de conversores de potencia, de acuerdo con los requerimientos del proyecto. 
-Se evaluarán las diferentes alternativas posibles y,
-en base a su complejidad y a su costo,
+Se evaluarán las diferentes alternativas posibles y, en base a su complejidad y a su costo,
 se elegirá la solución más adecuada para el logro de los objetivos. 
-
-\subsection{Diseño}
 Se realizarán simulaciones en SPICE (programa de simulación con énfasis en circuitos integrados),
 separando el proceso en 4 partes:
 \begin{itemize}
@@ -26,15 +23,18 @@ separando el proceso en 4 partes:
     \item Circuito de control: Alterna entre las etapas de carga.
     \item Circuito de protección: Protege a la batería en caso de cortocircuito.
 \end{itemize}
+Se realizará un análisis crítico de las primeras simulaciones y, en base a los resultados obtenidos, 
+se rediseñará reformulando o ajustando los circuitos propuestos. 
+Esta etapa finaliza con el diseño de un circuito impreso y la presentación del informe parcial. 
 
 \subsection{Implementación}
-El cargador se implementará en una placa de circuito impreso.
+Se construirá un prototipo funcional que cumpla con las especificaciones propuestas. 
 Debido a que el costo de una batería de litio de las características necesarias es elevado,
-se evaluará la posibilidad de realizar un prototipo a escala con una batería de menor tensión y/o capacidad.
+se evaluará la posibilidad de realizarlo a escala con una batería de menor tensión y/o capacidad.
 
 \subsection{Validación}
 Una vez terminado el proceso de diseño e implementación,
-se verificará que el prototipo cumpla con los requerimientos del proyecto.
+se verificará que el prototipo cumpla con las especificaciones oportunamente presentadas. 
 
 %Desarrollo de diferentes propuestas y toma de decisiones en base a las especificaciones recomendaciones del tutor
 
