Correción del cronograma

--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -28,16 +28,11 @@ a desarrollar y sus tiempos correspondientes.
             \gantttitle{Nov}{4} \\
 
             %tareas
-            \ganttbar{Investigación}{1}{10} \\
-            %\ganttgroup{Diseño}{2}{10} \\
-            %\ganttbar{Fuente conmutada}{2}{5} \\
-            %\ganttbar{Fuente de corriente}{5}{7} \\
-            %\ganttbar{Control}{6}{9} \\
-            %\ganttbar{Protecciones}{9}{10} \\
-            \ganttbar{Diseño}{2}{10} \\
+            \ganttbar{Diseño e investigación}{1}{10} \\
+            \ganttbar{Informe parcial}{9}{11} \\
             \ganttbar{Implementación}{11}{18} \\
             \ganttbar{Validación}{16}{21} \\
-            \ganttbar{Informe}{21}{28}
+            \ganttbar{Informe final}{21}{28}
 
         \end{ganttchart}
     \end{center}
