--- a/sections/resultados_e_indicadores.tex
+++ b/sections/resultados_e_indicadores.tex
@@ -6,6 +6,7 @@
 %Determinan cuándo, dónde y cuánto se realizarán de los mismos. Los definen en términos medibles.
 
 Se realizarán dos (2) entregas: un archivo de simulación a mediados de Julio,
+con su respectivo informe,
 cuando finalice la etapa de diseño,
 y un prototipo de cargador funcional en el mes de Diciembre,
 junto con el manual de instrucciones y el informe final.
