Abriendo el paraguas

--- a/sections/factibilidad.tex
+++ b/sections/factibilidad.tex
@@ -5,7 +5,7 @@ se requieren recursos materiales, financieros y humanos.
 
 Para la etapa de diseño se contará con bibliografía disponible en Internet o en la biblioteca de la facultad y software de simulación de circuitos.
 La construcción del prototipo y los ensayos se realizarán utilizando las herramientas, el equipamiento y la instrumentación del ATEI. 
-Para la validación experimental del prototipo se requerirá una batería de litio de 36V con BMS integrado. 
+Para la validación experimental del prototipo se requerirá una batería de litio con BMS integrado. 
 Los fondos necesarios para la compra de componentes serán proporcionados por la cátedra de Proyecto Final.
 Las actividades serán llevadas a cabo por el equipo que conforma el proyecto con el apoyo de los integrantes de la cátedra.
 
