Agregué el Hart a la bibliografía

--- a/biblio.bib
+++ b/biblio.bib
@@ -7,6 +7,15 @@
 	edition   = {3}
 }
 
+@book{hart,
+   title =     {Power Electronics},
+   author =    {Daniel W. Hart},
+   publisher = {McGraw-Hill Science/Engineering/Math},
+   isbn =      {9780073380674},
+   year =      {2010},
+   edition =   {1},
+}
+
 @book{pressman,
 	title     = {Switching Power Supply Design},
 	author    = {Abraham Pressman and Keith Billings and Taylor Morey},
